--- a/Teraoka/Controllers/SettingsController/SettingsController.xib
+++ b/Teraoka/Controllers/SettingsController/SettingsController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad10_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,6 +31,7 @@
                 <outlet property="lbSelectLanguage" destination="eCG-hV-vGI" id="ke8-zB-Vf1"/>
                 <outlet property="lbSelectMode" destination="x5b-mL-Pst" id="ri7-0O-C6e"/>
                 <outlet property="lbSetPassword" destination="zDt-7A-4Yr" id="onW-U2-XSZ"/>
+                <outlet property="lbSyncInfo" destination="tLz-GH-fDt" id="gdD-0f-DJI"/>
                 <outlet property="lbTableSelection" destination="F2t-gS-h9Y" id="12y-aA-WZR"/>
                 <outlet property="lbTableSelectionNotice" destination="LtL-oZ-wk8" id="Ay6-pf-1bV"/>
                 <outlet property="lbTitle" destination="nS1-zj-pGT" id="NSx-dm-M2L"/>
@@ -58,7 +58,7 @@
                     <rect key="frame" x="0.0" y="20" width="1112" height="70"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1mK-fq-l1M">
-                            <rect key="frame" x="30" y="17.5" width="42.5" height="35"/>
+                            <rect key="frame" x="30" y="17.5" width="42" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="Nnd-3z-MEM"/>
                                 <constraint firstAttribute="width" secondItem="1mK-fq-l1M" secondAttribute="height" multiplier="70:58" id="RFS-xF-YgI"/>
@@ -88,10 +88,16 @@
                     <rect key="frame" x="0.0" y="90" width="1112" height="1110"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aff-0P-bhl">
-                            <rect key="frame" x="0.0" y="0.0" width="1112" height="895"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1112" height="915.5"/>
                             <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLz-GH-fDt">
+                                    <rect key="frame" x="536" y="20" width="40.5" height="20.5"/>
+                                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lsJ-N0-jid">
-                                    <rect key="frame" x="131" y="50" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="70.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your server IP" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xzj-yc-54D">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -116,7 +122,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="EfS-w2-k2s">
-                                    <rect key="frame" x="131" y="150" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="170.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Language" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCG-hV-vGI">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -142,7 +148,7 @@
                                                     <rect key="frame" x="195" y="0.0" width="185" height="50"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oB-ZF-GWn">
-                                                            <rect key="frame" x="20" y="13.5" width="125" height="24"/>
+                                                            <rect key="frame" x="20" y="13" width="125" height="24"/>
                                                             <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="20"/>
                                                             <color key="textColor" red="0.76470588235294112" green="0.76470588235294112" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -182,7 +188,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PSD-21-WpG">
-                                    <rect key="frame" x="131" y="250" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="270.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set your password" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zDt-7A-4Yr">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -218,7 +224,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9wc-Ra-QDs">
-                                    <rect key="frame" x="131" y="350" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="370.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Mode" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5b-mL-Pst">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -256,7 +262,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="S0R-hv-OUq">
-                                    <rect key="frame" x="131" y="450" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="470.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Table Selection" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2t-gS-h9Y">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -294,7 +300,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="N7C-Mf-XUk">
-                                    <rect key="frame" x="131" y="510" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="530.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ca-PZ-EgK">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -327,7 +333,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="T6e-cf-cck">
-                                    <rect key="frame" x="131" y="610" width="750" height="55"/>
+                                    <rect key="frame" x="131" y="630.5" width="750" height="55"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ability to request for waiter's assistance" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhS-5e-oYe">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="55"/>
@@ -348,7 +354,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="F5X-yD-UdT">
-                                    <rect key="frame" x="131" y="715" width="750" height="50"/>
+                                    <rect key="frame" x="131" y="735.5" width="750" height="50"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ability to request for bill" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpj-Si-lyG">
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="50"/>
@@ -369,7 +375,7 @@
                                     </constraints>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Nw-BH-8np">
-                                    <rect key="frame" x="384" y="815" width="344" height="60"/>
+                                    <rect key="frame" x="384.5" y="835.5" width="343" height="60"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="60" id="YZZ-As-ett"/>
                                         <constraint firstAttribute="width" secondItem="8Nw-BH-8np" secondAttribute="height" multiplier="830:145" id="hkN-19-TaA"/>
@@ -383,7 +389,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Table selection is not applicable for Quick Serve mode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LtL-oZ-wk8">
-                                    <rect key="frame" x="501" y="450" width="380" height="50"/>
+                                    <rect key="frame" x="501" y="470.5" width="380" height="50"/>
                                     <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="14"/>
                                     <color key="textColor" red="0.8862745098" green="0.062745098040000002" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -396,6 +402,7 @@
                                 <constraint firstItem="EfS-w2-k2s" firstAttribute="top" secondItem="lsJ-N0-jid" secondAttribute="bottom" constant="50" id="3z9-9a-AU5"/>
                                 <constraint firstItem="LtL-oZ-wk8" firstAttribute="top" secondItem="zpm-Zd-HHC" secondAttribute="top" id="4g7-ZN-84s"/>
                                 <constraint firstItem="T6e-cf-cck" firstAttribute="leading" secondItem="N7C-Mf-XUk" secondAttribute="leading" id="78U-6D-Rw2"/>
+                                <constraint firstItem="tLz-GH-fDt" firstAttribute="top" secondItem="aff-0P-bhl" secondAttribute="top" constant="20" id="8s0-ZF-Tea"/>
                                 <constraint firstItem="LtL-oZ-wk8" firstAttribute="width" secondItem="zpm-Zd-HHC" secondAttribute="width" id="Agy-2f-eJE"/>
                                 <constraint firstItem="LtL-oZ-wk8" firstAttribute="leading" secondItem="zpm-Zd-HHC" secondAttribute="leading" id="Ap7-c6-7Yd"/>
                                 <constraint firstItem="8Nw-BH-8np" firstAttribute="centerX" secondItem="aff-0P-bhl" secondAttribute="centerX" id="EVo-YI-1Bc"/>
@@ -412,9 +419,10 @@
                                 <constraint firstItem="N7C-Mf-XUk" firstAttribute="top" secondItem="S0R-hv-OUq" secondAttribute="bottom" constant="10" id="Zth-Gr-75d"/>
                                 <constraint firstItem="9wc-Ra-QDs" firstAttribute="trailing" secondItem="PSD-21-WpG" secondAttribute="trailing" id="aFk-wW-VMY"/>
                                 <constraint firstItem="EfS-w2-k2s" firstAttribute="leading" secondItem="lsJ-N0-jid" secondAttribute="leading" id="ahp-sg-Mpg"/>
-                                <constraint firstItem="lsJ-N0-jid" firstAttribute="top" secondItem="aff-0P-bhl" secondAttribute="top" constant="50" id="alf-nW-87T"/>
                                 <constraint firstItem="S0R-hv-OUq" firstAttribute="top" secondItem="9wc-Ra-QDs" secondAttribute="bottom" constant="50" id="baM-JG-CXZ"/>
                                 <constraint firstItem="T6e-cf-cck" firstAttribute="top" secondItem="N7C-Mf-XUk" secondAttribute="bottom" constant="50" id="cZe-sg-24p"/>
+                                <constraint firstItem="lsJ-N0-jid" firstAttribute="top" secondItem="tLz-GH-fDt" secondAttribute="bottom" constant="30" id="d1V-0h-2Qr"/>
+                                <constraint firstItem="tLz-GH-fDt" firstAttribute="centerX" secondItem="aff-0P-bhl" secondAttribute="centerX" id="gso-Nc-lLD"/>
                                 <constraint firstItem="PSD-21-WpG" firstAttribute="trailing" secondItem="EfS-w2-k2s" secondAttribute="trailing" id="h6d-vT-2sF"/>
                                 <constraint firstItem="T6e-cf-cck" firstAttribute="trailing" secondItem="N7C-Mf-XUk" secondAttribute="trailing" id="kxn-ze-Myn"/>
                                 <constraint firstItem="F5X-yD-UdT" firstAttribute="trailing" secondItem="T6e-cf-cck" secondAttribute="trailing" id="sm1-T6-sIo"/>
