--- a/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
+++ b/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -38,18 +38,26 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XwX-19-Ef1">
                                 <rect key="frame" x="150" y="0.0" width="103" height="94.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
-                                        <rect key="frame" x="0.0" y="10" width="103" height="84.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
+                                        <rect key="frame" x="0.0" y="28" width="103" height="66.5"/>
                                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7S-H3-FVa">
+                                        <rect key="frame" x="0.0" y="8" width="42" height="20"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
+                                        <color key="textColor" red="0.21960784310000001" green="0.74509803919999995" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="xel-8c-8el" secondAttribute="bottom" id="9QM-gP-W9e"/>
-                                    <constraint firstItem="xel-8c-8el" firstAttribute="top" secondItem="XwX-19-Ef1" secondAttribute="top" constant="10" id="HcT-d8-Mle"/>
                                     <constraint firstAttribute="trailing" secondItem="xel-8c-8el" secondAttribute="trailing" id="Qxv-v5-Hhr"/>
+                                    <constraint firstItem="xel-8c-8el" firstAttribute="top" secondItem="l7S-H3-FVa" secondAttribute="bottom" id="cqL-0y-sEQ"/>
+                                    <constraint firstItem="l7S-H3-FVa" firstAttribute="top" secondItem="XwX-19-Ef1" secondAttribute="top" constant="8" id="fup-EJ-3Rz"/>
+                                    <constraint firstItem="l7S-H3-FVa" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="o2u-Dz-JsL"/>
                                     <constraint firstItem="xel-8c-8el" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="xh0-JU-eeM"/>
                                 </constraints>
                             </view>
@@ -57,7 +65,7 @@
                                 <rect key="frame" x="253" y="0.0" width="150" height="94.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPy-gM-rWv">
-                                        <rect key="frame" x="30.5" y="25" width="88" height="44"/>
+                                        <rect key="frame" x="31" y="25.5" width="88" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="M88-l4-olH"/>
                                             <constraint firstAttribute="width" constant="88" id="WyI-iR-STX"/>
@@ -103,6 +111,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="lbName" destination="l7S-H3-FVa" id="LbX-6e-qck"/>
                 <outlet property="lbOptions" destination="xel-8c-8el" id="ODq-IN-4hv"/>
                 <outlet property="lbPrice" destination="0TU-8I-2MK" id="H5D-Re-79n"/>
                 <outlet property="lbStatus" destination="DOL-GG-nVg" id="l7Q-qS-F2N"/>
