--- a/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
+++ b/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
@@ -38,16 +38,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XwX-19-Ef1">
                                 <rect key="frame" x="150" y="0.0" width="103" height="94.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
-                                        <rect key="frame" x="0.0" y="28" width="103" height="66.5"/>
-                                        <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
-                                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7S-H3-FVa">
-                                        <rect key="frame" x="0.0" y="8" width="42" height="20"/>
+                                        <rect key="frame" x="8" y="8" width="43" height="20.5"/>
                                         <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
                                         <color key="textColor" red="0.21960784310000001" green="0.74509803919999995" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
+                                        <rect key="frame" x="0.0" y="28.5" width="103" height="66"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
+                                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -57,7 +57,7 @@
                                     <constraint firstAttribute="trailing" secondItem="xel-8c-8el" secondAttribute="trailing" id="Qxv-v5-Hhr"/>
                                     <constraint firstItem="xel-8c-8el" firstAttribute="top" secondItem="l7S-H3-FVa" secondAttribute="bottom" id="cqL-0y-sEQ"/>
                                     <constraint firstItem="l7S-H3-FVa" firstAttribute="top" secondItem="XwX-19-Ef1" secondAttribute="top" constant="8" id="fup-EJ-3Rz"/>
-                                    <constraint firstItem="l7S-H3-FVa" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="o2u-Dz-JsL"/>
+                                    <constraint firstItem="l7S-H3-FVa" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" constant="8" id="o2u-Dz-JsL"/>
                                     <constraint firstItem="xel-8c-8el" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="xh0-JU-eeM"/>
                                 </constraints>
                             </view>
