--- a/Teraoka/Views/Cell/OptionCell/OptionSelectedTableCell/OptionSelectedTableCell.xib
+++ b/Teraoka/Views/Cell/OptionCell/OptionSelectedTableCell/OptionSelectedTableCell.xib
@@ -28,41 +28,44 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bc8-CB-IdK">
-                        <rect key="frame" x="60" y="5" width="42" height="20"/>
+                        <rect key="frame" x="60" y="5" width="40.5" height="20"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                         <color key="textColor" red="0.1529411765" green="0.1529411765" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXE-gp-p7k">
-                        <rect key="frame" x="104" y="4.5" width="7" height="21"/>
+                        <rect key="frame" x="102.5" y="4.5" width="7" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0E-cA-XUs">
-                        <rect key="frame" x="111" y="-1" width="57" height="32"/>
+                        <rect key="frame" x="109.5" y="-1.5" width="60" height="33"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
                         <state key="normal" title="change">
                             <color key="titleColor" red="0.20000000000000001" green="0.74901960784313726" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
+                        <connections>
+                            <action selector="changeAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nFL-XH-b9d"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=")" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jw6-aL-mJC">
-                        <rect key="frame" x="168" y="4.5" width="7" height="21"/>
+                        <rect key="frame" x="169.5" y="4.5" width="7" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ESy-J6-ER3">
-                        <rect key="frame" x="60" y="46" width="288" height="103.5"/>
+                        <rect key="frame" x="60" y="46.5" width="288" height="103"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select your preference:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmf-yy-wae">
-                                <rect key="frame" x="30" y="5" width="176.5" height="20"/>
+                                <rect key="frame" x="30" y="5" width="184" height="20"/>
                                 <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
                                 <color key="textColor" red="0.1529411765" green="0.1529411765" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xID-am-QkR">
-                                <rect key="frame" x="0.0" y="30" width="288" height="73.5"/>
+                                <rect key="frame" x="0.0" y="30" width="288" height="73"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6AU-Mw-0vh">
                                     <size key="itemSize" width="50" height="50"/>
@@ -112,6 +115,7 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="colView" destination="xID-am-QkR" id="vwU-LX-qN1"/>
+                <outlet property="lbSelected" destination="Bc8-CB-IdK" id="jsi-JX-Sxu"/>
             </connections>
             <point key="canvasLocation" x="5.5999999999999996" y="98.050974512743636"/>
         </tableViewCell>
