fix bug select option

--- a/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
+++ b/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
@@ -41,6 +41,9 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="No options available." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypd-kV-3S0">
                         <rect key="frame" x="150" y="32" width="72" height="130.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="F99-fd-aAc"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
